Bug fix: Menu, overflow icon size

--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -118,6 +118,9 @@ header nav a {
     font-size:inherit;
 }
 
+nav .ui-link {
+    font-size:17px;
+}
 
 .panel_logo {
     border-bottom:1px solid #999;
@@ -718,7 +721,6 @@ header nav a {
     position: fixed;
     font-family:icons-app; /* font family generated with icomoon.io app */
     text-align:center;
-    font-size:17px;
     line-height:48px;
     z-index: 2;
     }
